# little-utility

./: CMakeLists.txt  README.md  update.cmd  update.sh
include/: counter.hh  macros.hh  msg.hh  timer.hh  utility.hh
include/little-utility/: counter.hh  filter.hh  macros.hh  msg.hh  rand.hh  timer.hh  utility.hh
src/: CMakeLists.txt  test.cc
test/: CMakeLists.txt  test.cc  test_utility.cc
